Add swagger to Get & post
